<resources>
    <string name="app_name">StarWarsApi</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="birth_year">Birth Year</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="no_info">No info</string>
    <string name="swapi_url">http://swapi.dev/api/planets</string>
    <string name="no_known_residents">No known residents</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="Hair_color">Hair color</string>
    <string name="skin_color">Skin color</string>
    <string name="do_you_want_know_more">Do you want know more?</string>
    <string name="yes">Yes</string>
    <string name="there_is_no_data_anymore">There is no data anymore</string>
    <string name="there_is_no_connection">There Is no connection</string>
    <string name="service_unavailable">Service unavalable</string>
    <string name="UnknownException">Unknown exception</string>
</resources>