<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/default_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start||center"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/name"
                android:textSize="@dimen/char_field_name"></TextView>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="center||end"
                android:text="@string/no_info"
                android:textColor="@color/black"
                android:textSize="@dimen/char_field_value"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start||center"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/gender"
                android:textSize="@dimen/char_field_name"></TextView>

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="center||end"
                android:text="@string/no_info"
                android:textColor="@color/black"
                android:textSize="@dimen/char_field_value"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start||center"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/birth_year"
                android:textSize="@dimen/char_field_name"></TextView>

            <TextView
                android:id="@+id/birt_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="center||end"
                android:text="@string/no_info"
                android:textColor="@color/black"
                android:textSize="@dimen/char_field_value"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start||center"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/height"
                android:textSize="@dimen/char_field_name"></TextView>

            <TextView
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="center||end"
                android:text="@string/no_info"
                android:textColor="@color/black"
                android:textSize="@dimen/char_field_value"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start||center"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/mass"
                android:textSize="@dimen/char_field_name"></TextView>

            <TextView
                android:id="@+id/mass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="center||end"
                android:text="@string/no_info"
                android:textColor="@color/black"
                android:textSize="@dimen/char_field_value"></TextView>
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>